# CircuitSmith

./: .envrc.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  RELEASING.md  pyproject.toml  requirements-dev.txt
.claude/: codeowners.yaml  settings.json
.claude/skills/circuit/: CHANGELOG.md  SKILL.md  netgraph.py  renderer.py
.claude/skills/co-erc-engine/: SKILL.md
.claude/skills/co-netgraph/: SKILL.md
.claude/skills/co-schema/: SKILL.md
.claude/skills/commit/: SKILL.md
.claude/skills/epic-run/: SKILL.md
.claude/skills/fix-markdown/: SKILL.md
.claude/skills/housekeep/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/status/: SKILL.md
.claude/skills/ts-epic-new/: SKILL.md
.claude/skills/ts-idea-new/: SKILL.md
.claude/skills/ts-task-active/: SKILL.md
.claude/skills/ts-task-new/: SKILL.md
.github/workflows/: ci.yml  generate-circuits.yml  release.yml
.vibe/: config.toml
data/: config.json  esp32.circuit.yml  nrf52840.circuit.yml  nrf52840.layout.yml
docs/developers/: ARCHITECTURE.md  AUTONOMY.md  BRANCH_PROTECTION_CONCEPT.md  CI_PIPELINE.md  CODE_OF_CONDUCT.md  CODE_OWNERS.md  CODING_STANDARDS.md  COMMIT_POLICY.md  DEVELOPMENT_SETUP.md  MERMAID_STYLE_GUIDE.md  SECURITY_REVIEW.md  TASK_SYSTEM.md  TESTING.md
docs/developers/adr/: 0001-slots-not-coordinates.md  0002-ai-only-at-authoring-time.md  0003-netgraph-shared-contract.md  0004-exporter-decoupling.md  0005-erc-pre-layout.md  0006-rule-catalog-authoritative.md  0007-skill-directory-is-the-library.md  0008-phase-2b-trigger-on-evidence.md  0009-autonomous-implementation-mode.md  0010-mcu-profile-is-dev-board-shape.md  0011-content-identity-not-byte-identity.md  0012-library-as-installable-package.md  0013-build-guide-include-via-link.md  0014-docs-users-sibling-folder.md  0015-transistor-canonical-slot-right-column.md  0016-bjt-load-and-degeneration-resistors.md  0017-pull-up-anchor-widened-to-ic-inputs.md  README.md
docs/developers/ideas/: OVERVIEW.md
docs/developers/tasks/: EPICS.md  KANBAN.md  OVERVIEW.md
docs/users/: README.md
docs/users/examples/: README.md
docs/users/tutorial/: 01-minimal-circuit.circuit.yml  01-minimal-circuit.erc-report.md  01-minimal-circuit.layout.yml  01-minimal-circuit.md  01-minimal-circuit.meta.yml  02-fan-out.circuit.yml  02-fan-out.erc-report.md  02-fan-out.layout.yml  02-fan-out.md  02-fan-out.meta.yml  03-sub-blocks.circuit.yml  03-sub-blocks.erc-report.md  03-sub-blocks.layout.yml  03-sub-blocks.md  03-sub-blocks.meta.yml  04-erc-fix.broken.circuit.yml  04-erc-fix.broken.erc-report.md  04-erc-fix.broken.layout.yml  04-erc-fix.broken.meta.yml  04-erc-fix.fixed.circuit.yml  04-erc-fix.fixed.erc-report.md  04-erc-fix.fixed.meta.yml  04-erc-fix.md  05-bom-export.bom.csv  05-bom-export.bom.md  05-bom-export.md  06-layout-iteration.layout.yml  06-layout-iteration.md  06-layout-iteration.meta.yml  06-layout-iteration.out.layout.yml  README.md
scripts/: README.md  check_circuit_schema.py  check_erc_reports.py  check_exporters.py  check_gallery_regression.py  check_phase2b_trigger.py  codeowner_hook.py  commit-pathspec.sh  generate-schematic.py  housekeep.py  install_git_hooks.sh  portability_lint.py  pre-commit  regenerate_circuit_artefacts.py  release_burnup.py  release_snapshot.py  security_review_changes.py  task_system_config.py  update_netgraph_golden.py
scripts/git-hooks/: personal_data_patterns.yml.example
scripts/tests/: test_check_erc_reports.py  test_housekeep.py  test_housekeep_concurrency.py  test_phase2b_trigger.py  test_portability_lint.py  test_release_phase2b_gate.py  test_security_review_personal_data.py  test_version_lockstep.py
src/circuitsmith/: __init__.py  erc_engine.py  erc_report.py  markdown.py  netgraph.py  renderer.py
src/circuitsmith/components/: actives.py  connectors.py  ics.py  mcus.py  passives.py  sensors.py
src/circuitsmith/export/: __init__.py  bom_exporter.py  (+1 more)
tests/: _sexp.py  conftest.py  test_ai_placer.py  test_bom_exporter.py  test_check_gallery_regression.py  test_components.py  test_erc_engine.py  test_erc_report_enrichment.py  test_full_pedal_fixture.py  test_generator_byte_identity.py  test_kernel.py  test_layout_schema.py  test_markdown_block.py  test_meta_yml_escalations.py  test_meta_yml_provenance.py  test_module_boundaries.py  test_netgraph.py  test_netgraph_golden.py  test_netlist_exporter.py  test_netlist_structure.py  test_no_ai_flag.py  test_precommit_hook.py  test_renderer.py  test_renderer_erc.py  test_renderer_staleness.py  test_router.py  test_rubric.py  test_rubric_v1.py  test_schema_pre_commit.py  test_schema_validation.py  test_validate_catalog.py
tests/components/: test_555_profile.py  test_bjt_profiles.py  test_opamp_profile.py
tests/erc/: test_active_device_rules.py  test_cross_page_rules.py  test_sub_block_rules.py
tests/fixtures/: golden_hashes.json
tests/layout/: test_bjt_load_degeneration_rules.py  test_cc_decoupling_rule.py  test_page_propagation.py  test_pullup_ic_anchor.py  test_rc_high_pass_rule.py  test_rc_low_pass_rule.py  test_rr_divider_rule.py
tests/netgraph/: test_sub_block_flattener.py
tests/render/: test_cross_page_labels.py  test_multi_page_driver.py
tests/schema/: test_pages_schema.py  test_sub_blocks_schema.py
(+373 files in other folders)
